--- a/css/styles.css
+++ b/css/styles.css
@@ -90,9 +90,9 @@ header p {
 .rgb {
     font-family: dindong;
     font-size: 2rem;
-    line-height: 0.73em;
-    padding-top: 0.17em;
-    padding-bottom: 0.17em;
+    line-height: 0.73em !important;
+    padding-top: 0.17em !important;
+    padding-bottom: 0.17em !important;
     display: flex;
     gap: 0.3em;
     transition: 0.5s;
