--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,8 @@ header p {
     font-family: dindong;
     font-size: 2rem;
     line-height: 0.73em !important;
-    padding-top: 0.17em !important;
+    /* padding-top: 0.17em !important; */
+    margin-top: 0.17em;
     padding-bottom: 0.17em !important;
     display: flex;
     gap: 0.3em;
