--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ header {
     position: fixed;
     width: 100%;
     z-index: 1000;
+    height: 36px;
 } 
 
 header p {
@@ -47,6 +48,7 @@ header p {
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     background-color: white;
+    height: inherit;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -60,6 +62,7 @@ header p {
     border-top: 1px solid black;
     border-bottom: 1px solid black;    
     background-color: white;
+    height: inherit;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -79,6 +82,7 @@ header p {
     border-top: 1px solid black;
     border-bottom: 1px solid black;    
     background-color: white;
+    height: inherit;
 }
 
 @media only screen and (min-width: 600px) {
@@ -90,9 +94,9 @@ header p {
 .rgb {
     font-family: dindong;
     font-size: 2rem;
-    line-height: 24px !important;
-    padding-top: 5px !important;
-    padding-bottom: 5px !important;
+    line-height: 36px !important;
+    /* padding-top: 5px !important; */
+    /* padding-bottom: 5px !important; */
     display: flex;
     gap: 0.3em;
     transition: 0.5s;
