--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ header p {
     font-family: dindong;
     font-size: 2rem;
     line-height: 36px !important;
-    /* padding-top: 5px !important; */
+    padding-top: 5px !important;
     /* padding-bottom: 5px !important; */
     display: flex;
     gap: 0.3em;
