--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@
 body {
     font-family: Space Grotesk;
     font-size: 1.3rem;
+    background-color: whitesmoke;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -44,8 +45,8 @@ body {
 }
 
 header {
-    border: 1px solid black;
-    background-color: white;
+    border: 1px solid rgb(16, 16, 16);
+    background-color: whitesmoke;
     position: fixed;
     width: 100%;
     z-index: 1000;
@@ -57,9 +58,9 @@ header p {
 
 .header-big {
     position: absolute;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    background-color: white;
+    border-top: 1px solid rgb(16, 16, 16);
+    border-bottom: 1px solid rgb(16, 16, 16);
+    background-color: whitesmoke;
 }
 
 @media only screen and (max-width: 1199px) {
@@ -70,9 +71,9 @@ header p {
 
 .header-small {
     position: absolute;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;    
-    background-color: white;
+    border-top: 1px solid rgb(16, 16, 16);
+    border-bottom: 1px solid rgb(16, 16, 16);    
+    background-color: whitesmoke;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -89,9 +90,9 @@ header p {
 
 .header-mobile {
     position: absolute;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;    
-    background-color: white;
+    border-top: 1px solid rgb(16, 16, 16);
+    border-bottom: 1px solid rgb(16, 16, 16);    
+    background-color: whitesmoke;
 }
 
 @media only screen and (min-width: 600px) {
@@ -116,7 +117,7 @@ header p {
 }
 
 .no-style {
-    color: black;
+    color: rgb(16, 16, 16);
     text-decoration: none;
 }
 
@@ -227,8 +228,8 @@ header .header-big:hover .circulo, header .expanded.circulo {
     align-items: center;
     justify-content: center;
     line-height: 1.1em;
-    border-left: solid 1px black;
-    border-right: solid 1px black;
+    border-left: solid 1px rgb(16, 16, 16);
+    border-right: solid 1px rgb(16, 16, 16);
     transition: 0.5s;
 }
 
@@ -434,8 +435,8 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
 }
 
 .list-styling {
-    background-color: white;
-    border: 1px solid black;
+    background-color: whitesmoke;
+    border: 1px solid rgb(16, 16, 16);
     width: 100vw;
     height: calc(100vh - 87px);
     position: absolute;
@@ -452,7 +453,7 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
 .index-carousel-container {
     transition: 0.5s;
     height: 100vh;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(16, 16, 16);
 }
 
 .index-carousel .titulo {
@@ -518,7 +519,7 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
     justify-content: center;
     position: relative;
     overflow: hidden;
-    color: black;
+    color: rgb(16, 16, 16);
     text-decoration: none;
     transition: all 0.5s;
     z-index: 1;
@@ -546,7 +547,7 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  color: white;
+  color: whitesmoke;
   text-decoration: none;
   transition: all 0.5s;
   z-index: 1;
@@ -620,7 +621,7 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  color: white;
+  color: whitesmoke;
   text-decoration: none;
   transition: all 0.5s;
   z-index: 1;
@@ -694,7 +695,7 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  color: white;
+  color: whitesmoke;
   text-decoration: none;
   transition: all 0.5s;
   z-index: 1;
@@ -801,12 +802,12 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
     z-index: 980;
     font-family: anybody;
     height: 100vh;
-    border: 1px solid black;
-    background-color: white;
+    border: 1px solid rgb(16, 16, 16);
+    background-color: whitesmoke;
     font-size: 8rem;
     font-weight:100;
     /* width: 16.66666667%; */
-    color: black;
+    color: rgb(16, 16, 16);
 }
 
 .slick-list {
@@ -832,7 +833,7 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
         line-height: 0em;
         width: 72px;
         /* border: none; */
-        background-color: white;
+        background-color: whitesmoke;
     }
     .index-portfolio .next {
         right: 0;
@@ -842,7 +843,7 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
         line-height: 0em;
         width: 72px;
         /* border: none; */
-        background-color: white;
+        background-color: whitesmoke;
     }
     .slick-list {
         width: 100%;
@@ -857,8 +858,8 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
     align-items: center;
     position: fixed;
     bottom: 35px;
-    background-color: white;
-    border: black 1px solid;
+    background-color: whitesmoke;
+    border: rgb(16, 16, 16) 1px solid;
     height: 36px !important;
 }
 
@@ -906,19 +907,19 @@ header .header-big:hover .menu-option, header .expanded.menu-option {
 /* footer */
 
 footer {
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    background-color: white;
+    border-top: 1px solid rgb(16, 16, 16);
+    border-bottom: 1px solid rgb(16, 16, 16);
+    background-color: whitesmoke;
     position: fixed;
     width: 100%;
     height: 36px;
-    z-index: 1000;
+    z-index: 10000;
     bottom: 0; 
 }
 
 .borders {
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    border-left: 1px solid rgb(16, 16, 16);
+    border-right: 1px solid rgb(16, 16, 16);
     height: 36px;
 }
 
@@ -936,8 +937,8 @@ footer {
     justify-content: center;
     line-height: 1.1em;
     border: transparent;
-    border-top: solid 1px black;
-    background-color: white;
+    border-top: solid 1px rgb(16, 16, 16);
+    background-color: whitesmoke;
     transition: 0.5s;
     bottom: 35px;
 }
@@ -966,7 +967,7 @@ footer {
   }
 
 .projects {
-    background-color: white;
+    background-color: whitesmoke;
 }
 
 .projects div, .projects img {
@@ -975,7 +976,7 @@ footer {
 
 .projects a {
     text-decoration: none;
-    color: black;
+    color: rgb(16, 16, 16);
 }
 
 .projects p {
@@ -1053,7 +1054,7 @@ footer {
     object-fit: cover;
     transition: all 0.5s;
     opacity: 1;
-    filter: none;
+    filter: grayscale(100%);
     border-radius: 1.8em;
     z-index: 1; /* Lower than border */
     pointer-events: none; /* Prevent image from blocking border */
@@ -1065,7 +1066,7 @@ footer {
 .projects a:hover .green img,
 .projects a:hover .blue img {
     opacity: 1;
-    filter: none;
+    filter: grayscale(100%);
 }
 
 /* .red {
@@ -1123,7 +1124,7 @@ footer {
     width: 10em;
     font-size: 1.5rem;
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid rgb(16, 16, 16);
 }
 
 .dropdown-menu {
@@ -1133,7 +1134,7 @@ footer {
     right: auto;
     padding-left: 0.1em;
     width: 10em;
-    border: 1px solid black;
+    border: 1px solid rgb(16, 16, 16);
     border-radius: 0%;
     transform: translateY(-2px);
 }
@@ -1149,7 +1150,7 @@ footer {
 .show-small {
     /* height: 100vh; */
     align-content: center;
-    background-image: linear-gradient(white, rgba(255, 255, 255, 0));
+    background-image: linear-gradient(whitesmoke, rgba(255, 255, 255, 0));
     position: relative;
 }
 
@@ -1176,7 +1177,7 @@ footer {
 
 .show-small .info {
     /* border-bottom: 1px solid black; */
-    background-color: white;
+    background-color: whitesmoke;
     /* z-index: 20; */
     height: fit-content;
 }
@@ -1202,11 +1203,11 @@ footer {
 }
 
 .line {
-    border-right: 1px solid black;
+    border-right: 1px solid rgb(16, 16, 16);
 }
 
 .hor-line {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(16, 16, 16);
     margin-bottom: 2.5rem;
 }
 
@@ -1411,7 +1412,7 @@ header:hover .carousel-header-short {
 }
 
 .a-project li.slick-active {
-    background-color: black !important;
+    background-color: rgb(16, 16, 16) !important;
     width: 1em !important;
     height: 1em !important;
 }
@@ -1422,7 +1423,7 @@ header:hover .carousel-header-short {
 
 .button-skin {
     text-decoration: none;
-    color: black;
+    color: rgb(16, 16, 16);
     /* border: 1px solid black; */
     height: 36px;
     width: fit-content;
@@ -1515,3 +1516,75 @@ header:hover .carousel-header-short {
         display: none;
     } 
 }
+
+
+.pw-preview {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    width: 33%;
+    aspect-ratio: 1 / 1;
+    transform: translate(-50%, -50%); /* center both axes */
+    border-radius: 50%;
+    z-index: 1200;
+    pointer-events: none;
+    overflow: hidden;
+
+  
+    /* ring vars (tweak to change band size/softness) */
+    --ring-rgb: 0, 0, 0;  /* default black ring */
+    --ring-inner: 60%;
+    --ring-outer: 72%;
+  }
+  
+  /* ring overlay ABOVE the images (transparent center and outside) */
+  .pw-preview::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: 2;
+    background: rgb(16, 16, 16); /* full black fill */
+  }
+  
+  /* COLORED STATES: replace fill with ring */
+  .pw-preview.red::before,
+  .pw-preview.green::before,
+  .pw-preview.blue::before {
+    background: radial-gradient(circle at 50% 50%,
+      rgba(var(--ring-rgb), 0) var(--ring-inner),
+      rgba(var(--ring-rgb), 0.15) calc(var(--ring-inner) + 2%),
+      rgba(var(--ring-rgb), 0.85) var(--ring-outer),
+      rgba(var(--ring-rgb), 1) calc(var(--ring-outer) + 1%)
+    );
+  }
+  
+  /* set ring color */
+  .pw-preview.red   { --ring-rgb: 255, 0, 0; }
+  .pw-preview.green { --ring-rgb:   0,128, 0; }
+  .pw-preview.blue  { --ring-rgb:   0, 0,255; }
+  
+  /* image layers stay behind the overlay */
+  .pw-preview__img {
+    position: absolute;
+    inset: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: grayscale(100%);
+    opacity: 0;
+    transform: scale(1);
+    transition: opacity 250ms ease, transform 300ms ease;
+    z-index: 1;
+  }
+  .pw-preview__img.is-active { opacity: 1; transform: scale(1.04); }
+  
+  /* set the ring color via class (like the index) */
+  .pw-preview.red   { --ring-rgb: 255, 0, 0; }
+  .pw-preview.green { --ring-rgb:   0,128, 0; }
+  .pw-preview.blue  { --ring-rgb:   0, 0,255; }
+  
+  @media (max-width: 991px) {
+    .pw-preview { display: none; }
+  }
